# leaf

./: .gitignore  Cargo.toml  README.md  test.leaf  test.leafc  test.leafexe  test_math.leaf  test_math.leafc  test_math.leafexe  test_math.leafobj  test_syscall.txt
adr/: ldr-001-assembly-file-format-layout.md  ldr-002-assembly-file-format-layout-with-symbols.md  ldr-003-isa-and-operand-encoding.md  ldr-004-memory-and-stack.md  ldr-005-register-file-and-syscalls.md  ldr-006-expanded-syscall-interface.md  ldr-007-leaf-high-level-language-specification.md
leaf-asm/: Cargo.toml  test.sh
leaf-asm/fixtures/: data_and_rodata.leaf  jump.leaf  simple.leaf
leaf-asm/resources/: sample-1.leafasm  sample-1.leafbc
leaf-asm/resources/std/: strlen.leafasm
leaf-asm/src/: assembler.rs  ast.rs  common.rs  main.rs  parser.rs
leaf-asm/src/assembler/: asm.rs  assemble.rs  mod.rs
leaf-asm/src/grammar/: leaf_asm.pest
leaf-asm/src/linker/: linker.rs  mod.rs
leaf_asm/: Cargo.toml  test.sh
leaf_asm/fixtures/: all.leaf  callee.leaf  caller.leaf  factorial.leaf  factorial.leafobj  fibonacci.leaf  fibonacci.leafobj  syscall.leaf
leaf_asm/new_fixtures/: 01_arithmetic.leaf  01_arithmetic.leafobj  02_mov_immediate.leaf  02_mov_immediate.leafobj  03_memory.leaf  03_memory.leafexe  03_memory.leafobj  04_control_flow.leaf  04_control_flow.leafexe  04_control_flow.leafobj  (+14 more)
leaf_common/: Cargo.toml
leaf_common/src/: disassembler.rs  leaf_ast.rs  leaf_file.rs  lib.rs
leaf_compiler/: Cargo.toml
leaf_vm/: Cargo.toml
leaf_vm/resources/: syscall.leafexe
leaf_vm/src/: main.rs  vm.rs
(+12 files in other folders)
