[package]
name = "leaf-asm"
version = "0.1.2"
edition = "2024"

[dependencies]
pest = { version = "2.8.1" }
pest_derive = { version = "2.8.1" }
clap = { version = "4.5.40", features = ["color", "derive", "suggestions", "usage", "help"] }
log = "0.4.27"
env_logger = "0.11.8"
crc32fast = "1.4.2"
bincode = { version = "2.0.1", features = ["default"] }
toml = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
